[package]
name = "open4x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = [
  "bevy_ui",
] }
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
